--- a/Web.WebApp/appsettings.Development.json
+++ b/Web.WebApp/appsettings.Development.json
@@ -6,5 +6,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+
+  "POSTGRES_HOST": "localhost",
+  "POSTGRES_PORT": "5432",
+  "POSTGRES_USER": "postgres",
+  "POSTGRES_PASSWORD": "access123",
+  "POSTGRES_DB": "TrackExpense_Local_Db"
 }
