Refactor schema and seed default data role and user

--- a/Core.Infrastructure/Core.Infrastructure.csproj
+++ b/Core.Infrastructure/Core.Infrastructure.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Mapper\" />
-    <Folder Include="Repository\" />
+    <Folder Include="Repository\IRepository\" />
   </ItemGroup>
 
   <ItemGroup>
