--- a/src/Web.WebApp/appsettings.Development.json
+++ b/src/Web.WebApp/appsettings.Development.json
@@ -12,5 +12,15 @@
   "POSTGRES_PORT": "5432",
   "POSTGRES_USER": "postgres",
   "POSTGRES_PASSWORD": "access123",
-  "POSTGRES_DB": "TrackExpense_Local_Db"
+  "POSTGRES_DB": "TrackExpense_Local_Db",
+
+  "EmailSetting": {
+    "SenderName": "Track My Expense",
+    "SenderEmail": "no-reply@trackmyexpense.com",
+    "Host": "localhost",
+    "Port": 25,
+    "User": "",
+    "Password": "",
+    "SSL": false
+  }
 }
