--- a/src/Web.WebApp/Properties/launchSettings.json
+++ b/src/Web.WebApp/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "WebApp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:8081;http://localhost:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
