using db factory pool

--- a/src/Web.WebApp/appsettings.Development.json
+++ b/src/Web.WebApp/appsettings.Development.json
@@ -4,15 +4,18 @@
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
 
-  "POSTGRES_HOST": "localhost",
-  "POSTGRES_PORT": "5432",
-  "POSTGRES_USER": "postgres",
-  "POSTGRES_PASSWORD": "access123",
-  "POSTGRES_DB": "TrackExpense_Local_Db",
+  "DatabaseSetting": {
+    "Host": "localhost",
+    "Port": "5432",
+    "User": "postgres",
+    "Password": "access123",
+    "Database": "TrackExpense_Local_Db"
+  },
 
   "EmailSetting": {
     "SenderName": "Track My Expense",
