Finish admin icon mgmt

--- a/src/Web.WebApp/appsettings.Development.json
+++ b/src/Web.WebApp/appsettings.Development.json
@@ -25,5 +25,12 @@
     "User": "",
     "Password": "",
     "SSL": false
+  },
+
+  "FileUploadSetting": {
+    "MaxFileSizeKb": 3072,
+    "TempDir": "C:\\Temp\\TME",
+    "UploadDir": "C:\\Temp\\TME\\Upload",
+    "UploadWebUrl": "/upload"
   }
 }
