--- a/src/Web.WebApp/Web.WebApp.csproj
+++ b/src/Web.WebApp/Web.WebApp.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
     <ProjectReference Include="..\Core.Infrastructure\Core.Infrastructure.csproj" />
+    <ProjectReference Include="..\Core.Ioc\Core.Ioc.csproj" />
   </ItemGroup>
 
 </Project>
