add azure storage

--- a/src/Web.WebApp/appsettings.Development.json
+++ b/src/Web.WebApp/appsettings.Development.json
@@ -32,5 +32,9 @@
     "TempDir": "C:\\Temp\\TME",
     "UploadDir": "C:\\Temp\\TME\\Upload",
     "UploadWebUrl": "/upload"
+  },
+
+  "AzureStorage": {
+    "IsEnabled":  false
   }
 }
