--- a/src/Core.Infrastructure/Core.Infrastructure.csproj
+++ b/src/Core.Infrastructure/Core.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
+    <PackageReference Include="OpenIddict.Abstractions" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
