--- a/src/Web.WebApp/Web.WebApp.csproj
+++ b/src/Web.WebApp/Web.WebApp.csproj
@@ -19,6 +19,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MudBlazor" Version="6.0.7" />
+    <PackageReference Include="OpenIddict" Version="4.0.0-preview2.22368.68" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0-preview2.22368.68" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.0.0-preview2.22368.68" />
   </ItemGroup>
 
   <ItemGroup>
