--- a/src/Web.WebApi/appsettings.json
+++ b/src/Web.WebApi/appsettings.json
@@ -7,10 +7,12 @@
   },
   "AllowedHosts": "*",
 
-  "JwtSetting": {
-    "Secret": "RANDOM@KqAJm2jMjyG3NkvS",
-    "Issuer": "TrackingBudgetjar",
-    "Audience": "TrackingBudgetjar",
-    "TokenExpirationDay": 2
+  "OidcSetting": {
+    "ClientId": "api-client",
+    "Issuer": "https://localhost:8081/",
+    "RedirectUris": "https://oauth.pstmn.io/v1/callback, https://localhost:8081/",
+    "PostLogoutRedirectUri": "https://localhost:8081/account/login",
+    "AccessTokenLifetimeMinutes": 30,
+    "RefreshTokenLifetimeDays": 7
   }
 }
