--- a/src/Web.WebApp/appsettings.Development.json
+++ b/src/Web.WebApp/appsettings.Development.json
@@ -35,6 +35,15 @@
   },
 
   "AzureStorage": {
-    "IsEnabled":  false
+    "IsEnabled": false
+  },
+
+  "OidcSetting": {
+    "ClientId": "api-client",
+    "Issuer": "https://localhost:8081/",
+    "RedirectUris": "https://oauth.pstmn.io/v1/callback, https://localhost:8081/",
+    "PostLogoutRedirectUri": "https://localhost:8081/account/login",
+    "AccessTokenLifetimeMinutes": 30,
+    "RefreshTokenLifetimeDays": 7
   }
 }
