--- a/src/Web.WebApp/appsettings.json
+++ b/src/Web.WebApp/appsettings.json
@@ -7,4 +7,13 @@
     }
   },
   "AllowedHosts": "*",
+
+  "OidcSetting": {
+    "ClientId": "api-client",
+    "Issuer": "https://localhost:8081/",
+    "RedirectUris": "https://oauth.pstmn.io/v1/callback, https://localhost:8081/",
+    "PostLogoutRedirectUri": "https://localhost:8081/account/login",
+    "AccessTokenLifetimeMinutes": 30,
+    "RefreshTokenLifetimeDays": 7
+  }
 }
